# monitor-brightness-control

./: .gitignore  LICENSE  README.md  install.sh  projetodev.txt  pyproject.toml
src/monitor_control/: __init__.py  cli.py  ddc.py  gui.py  profiles.py  service.py
tests/: test_ddc.py  test_gui.py  test_profiles.py
