[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-brightness-control"
version = "0.1.0"
description = "Control external monitor brightness, contrast and input via DDC/CI"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
]
dependencies = [
    "click>=8.0",
    "pydantic>=1.8",
    "rich>=12.0",
    "PyQt6>=6.0",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.scripts]
monitor-control = "monitor_control.cli:main"
monitor-gui = "monitor_control.gui:main"

[project.urls]
Homepage = "https://github.com/yourusername/monitor-brightness-control"
Repository = "https://github.com/yourusername/monitor-brightness-control"
Issues = "https://github.com/yourusername/monitor-brightness-control/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true